Deploy/k8s/5-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-deployment
  namespace: dev
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: todo-spring-api
          image: panchanandevops/todo-spring-api:server-v0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
  namespace: dev
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
  type: ClusterIP
