Deploy/k8s/6-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-api-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: panchanandevops.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-api-service
                port:
                  number: 3000
